# AI-Powered-Zoho-Project-Chatbot

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260613_190053_initial_schema.py  20260614_000001_add_chat_threads.py  20260614_000002_add_memory_fields.py
backend/app/: config.py  database.py  dependencies.py  logging_config.py  main.py
backend/app/agents/: action_agent.py  graph.py  hil_node.py  memory_writer.py  query_agent.py  router.py  state.py
backend/app/models/: db.py  schemas.py
backend/app/routers/: auth.py  chat.py  health.py  threads.py
backend/app/services/: crypto.py  llm_service.py  memory_store.py  oauth_service.py  zoho_client.py
backend/app/tools/: read_tools.py  write_tools.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: api.ts  types.ts
