[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zoho-project-chatbot"
version = "1.0.0"
description = "AI-powered Zoho Projects chatbot with LangGraph multi-agent system"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic-settings==2.7.0",
    "pydantic==2.10.3",
    "langchain-core==0.3.28",
    "langchain-aws==0.2.9",
    "langchain-google-genai==2.0.7",
    "langgraph==0.2.60",
    "langgraph-checkpoint-postgres==2.0.12",
    "httpx==0.28.1",
    "cryptography==44.0.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "respx==0.21.1",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
